# ibm-exa

./: README.md  ibm_exa_integration.ipynb  pyproject.toml  requirements.txt
src/: __init__.py  client.py  exa_client.py  example.py  model.py  test.py  tools.py
tests/: __init__.py  test_client.py  test_version.py
