[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-exa"
version = "0.1.0"
authors = [
    { name = "Exa Labs", email = "hello@exa.ai" }
]
description = "IBM EXA Integration Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/exa-labs/ibm-exa"
"Bug Tracker" = "https://github.com/exa-labs/ibm-exa/issues" 